<resources>
    <string name="app_name">TeamCharizard</string>
    <string name="name_of_app">App Name</string>
    <string name="view_stats">Player Stats</string>
    <string name="view_actions">View Actions</string>
    <string name="parent_button">View Stats</string>
    <string name="coach_button">Referee</string>
    <string name="fg">FG</string>
    <string name="ThreePT">3PT</string>
    <string name="points">PTS</string>
    <string name="ft">FT</string>
    <string name="rebounds">REB</string>
    <string name="steal">STL</string>
    <string name="block">BLK</string>
    <string name="fouls">PF</string>
    <string name="player_and_team">Player and Team</string>
    <string name="player_and_team1">P1 T1</string>
    <string name="player_and_team2">P2 T2</string>
    <string name="player_and_team3">P3 T3</string>
    <string name="action">Action</string>
    <string name="quarter">Quarter</string>
    <string name="quarter1">1st</string>
    <string name="quarter2">2nd</string>
    <string name="quarter3">3rd</string>
    <string name="quarter4">4th</string>
    <string name="time">Time</string>
    <string name="time1">7:30</string>
    <string name="time2">7:19</string>
    <string name="time3">7:18</string>
    <string name="time4">7:10</string>
    <string name="time5">7:09</string>
    <string name="time6">7:00</string>
    <string name="time7">6:59</string>
    <string name="time8">6:50</string>
    <string name="time9">6:40</string>
    <string name="time10">6:39</string>
    <string name="time11">6:30</string>
    <string name="time12">6:29</string>
    <string name="time13">6:20</string>
    <string name="time14">6:19</string>
    <string name="players">Player Names</string>
    <string name="action1">2pt fg made</string>
    <string name="action2">2pt fg missed</string>
    <string name="action3">3pt fg made</string>
    <string name="action4">3pt fg missed</string>
    <string name="action5">Steal</string>
    <string name="action6">Block</string>
    <string name="action7">FT made</string>
    <string name="action8">FT missed</string>
    <string name="action9">Rebound</string>
    <string name="action10">Foul</string>
    <string name="action11">Stop Clock</string>
    <string name="action12">Timeout</string>
    <string name="tempFG">1-1</string>
    <string name="tempThree">2-2</string>
    <string name="tempFree">0-7</string>
    <string name="tempReb">3</string>
    <string name="tempBlock">4</string>
    <string name="tempSteal">5</string>
    <string name="tempFoul">6</string>
    <string name="tempPoints">8</string>
    <string name="add_stats_title">Actions</string>
    <string name="player1">1</string>
    <string name="player2">2</string>
    <string name="player3">3</string>
    <string name="player4">4</string>
    <string name="player5">5</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="leagueName"> UIUC league </string>
    <string name="game1"> Team1 VS Team2 </string>
    <string name="team_button"> teams </string>
    <string name="VS"> VS. </string>
    <string name="vs"> vs. </string>
    <string name="timeExample"> 8:00 </string>
    <string name="live"> Live </string>
    <string name="stats"> Stats </string>
    <string name="addNewGame"> Add New Game </string>
    <string name="addGame"> Add Game </string>
    <string name="choose"> Choose Game </string>





    <string name="app_name">TeamCharizard</string>
    <string name="name_of_app">App Name</string>
    <string name="view_stats">Player Stats</string>
    <string name="view_actions">View Actions</string>
    <string name="parent_button">View Stats</string>
    <string name="coach_button">Referee</string>
    <string name="fg">FG</string>
    <string name="ThreePT">3PT</string>
    <string name="points">PTS</string>
    <string name="ft">FT</string>
    <string name="rebounds">REB</string>
    <string name="steal">STL</string>
    <string name="block">BLK</string>
    <string name="fouls">PF</string>
    <string name="player_and_team">Player and Team</string>
    <string name="player_and_team1">P1 T1</string>
    <string name="player_and_team2">P2 T2</string>
    <string name="player_and_team3">P3 T3</string>
    <string name="action">Action</string>
    <string name="quarter">Quarter</string>
    <string name="quarter1">1st</string>
    <string name="quarter2">2nd</string>
    <string name="quarter3">3rd</string>
    <string name="quarter4">4th</string>
    <string name="time">Time</string>
    <string name="time1">7:30</string>
    <string name="time2">7:19</string>
    <string name="time3">7:18</string>
    <string name="time4">7:10</string>
    <string name="time5">7:09</string>
    <string name="time6">7:00</string>
    <string name="time7">6:59</string>
    <string name="time8">6:50</string>
    <string name="time9">6:40</string>
    <string name="time10">6:39</string>
    <string name="time11">6:30</string>
    <string name="time12">6:29</string>
    <string name="time13">6:20</string>
    <string name="time14">6:19</string>
    <string name="players">Player Names</string>
    <string name="action1">2pt fg made</string>
    <string name="action2">2pt fg missed</string>
    <string name="action3">3pt fg made</string>
    <string name="action4">3pt fg missed</string>
    <string name="action5">Steal</string>
    <string name="action6">Block</string>
    <string name="action7">FT made</string>
    <string name="action8">FT missed</string>
    <string name="action9">Rebound</string>
    <string name="action10">Foul</string>
    <string name="action11"></string>
    <string name="action12"></string>
    <string name="tempFG">1-1</string>
    <string name="tempThree">2-2</string>
    <string name="tempFree">0-7</string>
    <string name="tempReb">3</string>
    <string name="tempBlock">4</string>
    <string name="tempSteal">5</string>
    <string name="tempFoul">6</string>
    <string name="tempPoints">8</string>
    <string name="add_stats_title">Actions</string>
    <string name="player1">1</string>
    <string name="player2">2</string>
    <string name="player3">3</string>
    <string name="player4">4</string>
    <string name="player5">5</string>
    <string name="player6">10</string>

    <string name="player1_name">Brandi Beasley</string>
    <string name="player2_name">Lyric Robins</string>
    <string name="player3_name">Arieal Scott</string>
    <string name="player4_name">Carolyn Waleski</string>
    <string name="player5_name">Cierra Rice</string>
    <string name="player6_name">Jeanae Terry</string>

    <string name="placehold_player_name">Basket Ball</string>







    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="leagueName"> UIUC </string>
    <string name="game1"> Team1 vs Team2 </string>
    <string name="team_button"> teams </string>
    <string name="VS"> VS. </string>
    <string name="vs"> vs. </string>
    <string name="timeExample"> 8:00 </string>
    <string name="live"> Live </string>
    <string name="stats"> Stats </string>
    <string name="coach_login">Coach Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_coach_team_select">CoachTeamSelectActivity</string>
    <string name="addNewGame"> Add New Game </string>
    <string name="addGame"> Add Game </string>
    <string name="app_name">TeamCharizard</string>
    <string name="name_of_app">App Name</string>
    <string name="view_stats">Player Stats</string>
    <string name="view_actions">View Actions</string>
    <string name="parent_button">View Stats</string>
    <string name="coach_button">Referee</string>
    <string name="fg">FG</string>
    <string name="ThreePT">3PT</string>
    <string name="points">PTS</string>
    <string name="ft">FT</string>
    <string name="rebounds">REB</string>
    <string name="steal">STL</string>
    <string name="block">BLK</string>
    <string name="fouls">PF</string>
    <string name="player_and_team">Player and Team</string>
    <string name="player_and_team1">P1 T1</string>
    <string name="player_and_team2">P2 T2</string>
    <string name="player_and_team3">P3 T3</string>
    <string name="action">Action</string>
    <string name="quarter">Quarter</string>
    <string name="quarter1">1st</string>
    <string name="quarter2">2nd</string>
    <string name="quarter3">3rd</string>
    <string name="quarter4">4th</string>
    <string name="time">Time</string>
    <string name="time1">7:30</string>
    <string name="time2">7:19</string>
    <string name="time3">7:18</string>
    <string name="time4">7:10</string>
    <string name="time5">7:09</string>
    <string name="time6">7:00</string>
    <string name="time7">6:59</string>
    <string name="time8">6:50</string>
    <string name="time9">6:40</string>
    <string name="time10">6:39</string>
    <string name="time11">6:30</string>
    <string name="time12">6:29</string>
    <string name="time13">6:20</string>
    <string name="time14">6:19</string>
    <string name="players">Player Names</string>
    <string name="action1">2pt fg made</string>
    <string name="action2">2pt fg missed</string>
    <string name="action3">3pt fg made</string>
    <string name="action4">3pt fg missed</string>
    <string name="action5">Steal</string>
    <string name="action6">Block</string>
    <string name="action7">FT made</string>
    <string name="action8">FT missed</string>
    <string name="action9">Rebound</string>
    <string name="action10">Foul</string>
    <string name="action11"></string>
    <string name="action12"></string>
    <string name="tempFG">1-1</string>
    <string name="tempThree">2-2</string>
    <string name="tempFree">0-7</string>
    <string name="tempReb">3</string>
    <string name="tempBlock">4</string>
    <string name="tempSteal">5</string>
    <string name="tempFoul">6</string>
    <string name="tempPoints">8</string>
    <string name="add_stats_title">Actions</string>
    <string name="player1">1</string>
    <string name="player2">2</string>
    <string name="player3">3</string>
    <string name="player4">4</string>
    <string name="player5">5</string>
    <string name="player6">10</string>

    <string name="player1_name">Brandi Beasley</string>
    <string name="player2_name">Lyric Robins</string>
    <string name="player3_name">Arieal Scott</string>
    <string name="player4_name">Carolyn Waleski</string>
    <string name="player5_name">Cierra Rice</string>
    <string name="player6_name">Jeanae Terry</string>

    <string name="placehold_player_name">Basket Ball</string>


    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="leagueName"> UIUC </string>
    <string name="game1"> Team1 vs Team2 </string>
    <string name="team_button"> teams </string>
    <string name="VS"> VS. </string>
    <string name="vs"> vs. </string>
    <string name="timeExample"> 8:00 </string>
    <string name="live"> Live </string>
    <string name="stats"> Stats </string>
    <string name="coach_login">Coach Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_coach_team_select">CoachTeamSelectActivity</string>
    <string name="addNewGame"> Add New Game </string>
    <string name="addGame"> Add Game </string>



</resources>
