<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewTeamsFragmentOne">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/players" />

            <TextView
                android:padding="3dip"
                android:text="@string/fg" />

            <TextView
                android:padding="3dip"
                android:text="@string/ThreePT" />

            <TextView
                android:padding="3dip"
                android:text="@string/ft" />

            <TextView
                android:padding="3dip"
                android:text="@string/rebounds" />

            <TextView
                android:padding="3dip"
                android:text="@string/steal" />

            <TextView
                android:padding="3dip"
                android:text="@string/block" />

            <TextView
                android:padding="3dip"
                android:text="@string/fouls" />

            <TextView
                android:padding="3dip"
                android:text="@string/points" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/view_teams_player1"
                android:padding="3dip"
                android:text="@string/player1" />

            <TextView
                android:id="@+id/player1_fg"
                android:padding="3dip"
                android:text="@string/tempFG" />

            <TextView
                android:id="@+id/player1_three"
                android:padding="3dip"
                android:text="@string/tempThree" />

            <TextView
                android:id="@+id/player1_ft"
                android:padding="3dip"
                android:text="@string/tempFree" />

            <TextView
                android:id="@+id/player1_reb"
                android:padding="3dip"
                android:text="@string/tempReb" />

            <TextView
                android:id="@+id/player1_steal"
                android:padding="3dip"
                android:text="@string/tempSteal" />

            <TextView
                android:id="@+id/player1_block"
                android:padding="3dip"
                android:text="@string/tempBlock" />

            <TextView
                android:id="@+id/player1_fouls"
                android:padding="3dip"
                android:text="@string/tempFoul" />

            <TextView
                android:id="@+id/player1_points"
                android:padding="3dip"
                android:text="@string/tempPoints" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/view_teams_player2"
                android:padding="3dip"
                android:text="@string/player2" />

            <TextView
                android:id="@+id/player2_fg"
                android:padding="3dip"
                android:text="@string/tempFG" />

            <TextView
                android:id="@+id/player2_three"
                android:padding="3dip"
                android:text="@string/tempThree" />

            <TextView
                android:id="@+id/player2_ft"
                android:padding="3dip"
                android:text="@string/tempFree" />

            <TextView
                android:id="@+id/player2_reb"
                android:padding="3dip"
                android:text="@string/tempReb" />

            <TextView
                android:id="@+id/player2_steal"
                android:padding="3dip"
                android:text="@string/tempSteal" />

            <TextView
                android:id="@+id/player2_block"
                android:padding="3dip"
                android:text="@string/tempBlock" />

            <TextView
                android:id="@+id/player2_fouls"
                android:padding="3dip"
                android:text="@string/tempFoul" />

            <TextView
                android:id="@+id/player2_points"
                android:padding="3dip"
                android:text="@string/tempPoints" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/view_teams_player3"
                android:padding="3dip"
                android:text="@string/player3" />

            <TextView
                android:id="@+id/player3_fg"
                android:padding="3dip"
                android:text="@string/tempFG" />

            <TextView
                android:id="@+id/player3_three"
                android:padding="3dip"
                android:text="@string/tempThree" />

            <TextView
                android:id="@+id/player3_ft"
                android:padding="3dip"
                android:text="@string/tempFree" />

            <TextView
                android:id="@+id/player3_reb"
                android:padding="3dip"
                android:text="@string/tempReb" />

            <TextView
                android:id="@+id/player3_steal"
                android:padding="3dip"
                android:text="@string/tempSteal" />

            <TextView
                android:id="@+id/player3_block"
                android:padding="3dip"
                android:text="@string/tempBlock" />

            <TextView
                android:id="@+id/player3_fouls"
                android:padding="3dip"
                android:text="@string/tempFoul" />

            <TextView
                android:id="@+id/player3_points"
                android:padding="3dip"
                android:text="@string/tempPoints" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/view_teams_player4"
                android:padding="3dip"
                android:text="@string/player4" />

            <TextView
                android:id="@+id/player4_fg"
                android:padding="3dip"
                android:text="@string/tempFG" />

            <TextView
                android:id="@+id/player4_three"
                android:padding="3dip"
                android:text="@string/tempThree" />

            <TextView
                android:id="@+id/player4_ft"
                android:padding="3dip"
                android:text="@string/tempFree" />

            <TextView
                android:id="@+id/player4_reb"
                android:padding="3dip"
                android:text="@string/tempReb" />

            <TextView
                android:id="@+id/player4_steal"
                android:padding="3dip"
                android:text="@string/tempSteal" />

            <TextView
                android:id="@+id/player4_block"
                android:padding="3dip"
                android:text="@string/tempBlock" />

            <TextView
                android:id="@+id/player4_fouls"
                android:padding="3dip"
                android:text="@string/tempFoul" />

            <TextView
                android:id="@+id/player4_points"
                android:padding="3dip"
                android:text="@string/tempPoints" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/view_teams_player5"
                android:padding="3dip"
                android:text="@string/player5" />

            <TextView
                android:id="@+id/player5_fg"
                android:padding="3dip"
                android:text="@string/tempFG" />

            <TextView
                android:id="@+id/player5_three"
                android:padding="3dip"
                android:text="@string/tempThree" />

            <TextView
                android:id="@+id/player5_ft"
                android:padding="3dip"
                android:text="@string/tempFree" />

            <TextView
                android:id="@+id/player5_steal"
                android:padding="3dip"
                android:text="@string/tempSteal" />

            <TextView
                android:id="@+id/player5_block"
                android:padding="3dip"
                android:text="@string/tempBlock" />

            <TextView
                android:id="@+id/player5_fouls"
                android:padding="3dip"
                android:text="@string/tempFoul" />

            <TextView
                android:id="@+id/player5_reb"
                android:padding="3dip"
                android:text="@string/tempReb" />

            <TextView
                android:id="@+id/player5_points"
                android:padding="3dip"
                android:text="@string/tempPoints" />
        </TableRow>
    </TableLayout>


</FrameLayout>