<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewTeamsFragmentTwo">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/players" />

            <TextView
                android:padding="3dip"
                android:text="@string/fg" />

            <TextView
                android:padding="3dip"
                android:text="@string/ThreePT" />

            <TextView
                android:padding="3dip"
                android:text="@string/ft" />

            <TextView
                android:padding="3dip"
                android:text="@string/rebounds" />

            <TextView
                android:padding="3dip"
                android:text="@string/steal" />

            <TextView
                android:padding="3dip"
                android:text="@string/block" />

            <TextView
                android:padding="3dip"
                android:text="@string/fouls" />

            <TextView
                android:padding="3dip"
                android:text="@string/points" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/view_teams_player6"
                android:padding="3dip"
                android:text="@string/player5" />

            <TextView
                android:id="@+id/player6_fg"
                android:padding="3dip"
                android:text="@string/tempFG" />

            <TextView
                android:id="@+id/player6_three"
                android:padding="3dip"
                android:text="@string/tempThree" />

            <TextView
                android:id="@+id/player6_ft"
                android:padding="3dip"
                android:text="@string/tempFree" />

            <TextView
                android:id="@+id/player6_reb"
                android:padding="3dip"
                android:text="@string/tempReb" />

            <TextView
                android:id="@+id/player6_steal"
                android:padding="3dip"
                android:text="@string/tempSteal" />

            <TextView
                android:id="@+id/player6_block"
                android:padding="3dip"
                android:text="@string/tempBlock" />

            <TextView
                android:id="@+id/player6_fouls"
                android:padding="3dip"
                android:text="@string/tempFoul" />

            <TextView
                android:id="@+id/player6_points"
                android:padding="3dip"
                android:text="@string/tempPoints" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/view_teams_player7"
                android:padding="3dip"
                android:text="@string/player4" />

            <TextView
                android:id="@+id/player7_fg"
                android:padding="3dip"
                android:text="@string/tempFG" />

            <TextView
                android:id="@+id/player7_three"
                android:padding="3dip"
                android:text="@string/tempThree" />

            <TextView
                android:id="@+id/player7_ft"
                android:padding="3dip"
                android:text="@string/tempFree" />

            <TextView
                android:id="@+id/player7_reb"
                android:padding="3dip"
                android:text="@string/tempReb" />

            <TextView
                android:id="@+id/player7_steal"
                android:padding="3dip"
                android:text="@string/tempSteal" />

            <TextView
                android:id="@+id/player7_block"
                android:padding="3dip"
                android:text="@string/tempBlock" />

            <TextView
                android:id="@+id/player7_fouls"
                android:padding="3dip"
                android:text="@string/tempFoul" />

            <TextView
                android:id="@+id/player7_points"
                android:padding="3dip"
                android:text="@string/tempPoints" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/view_teams_player8"
                android:padding="3dip"
                android:text="@string/player3" />

            <TextView
                android:id="@+id/player8_fg"
                android:padding="3dip"
                android:text="@string/tempFG" />

            <TextView
                android:id="@+id/player8_three"
                android:padding="3dip"
                android:text="@string/tempThree" />

            <TextView
                android:id="@+id/player8_ft"
                android:padding="3dip"
                android:text="@string/tempFree" />

            <TextView
                android:id="@+id/player8_reb"
                android:padding="3dip"
                android:text="@string/tempReb" />

            <TextView
                android:id="@+id/player8_steal"
                android:padding="3dip"
                android:text="@string/tempSteal" />

            <TextView
                android:id="@+id/player8_block"
                android:padding="3dip"
                android:text="@string/tempBlock" />

            <TextView
                android:id="@+id/player8_fouls"
                android:padding="3dip"
                android:text="@string/tempFoul" />

            <TextView
                android:id="@+id/player8_points"
                android:padding="3dip"
                android:text="@string/tempPoints" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/view_teams_player9"
                android:padding="3dip"
                android:text="@string/player2" />

            <TextView
                android:id="@+id/player9_fg"
                android:padding="3dip"
                android:text="@string/tempFG" />

            <TextView
                android:id="@+id/player9_three"
                android:padding="3dip"
                android:text="@string/tempThree" />

            <TextView
                android:id="@+id/player9_ft"
                android:padding="3dip"
                android:text="@string/tempFree" />

            <TextView
                android:id="@+id/player9_reb"
                android:padding="3dip"
                android:text="@string/tempReb" />

            <TextView
                android:id="@+id/player9_steal"
                android:padding="3dip"
                android:text="@string/tempSteal" />

            <TextView
                android:id="@+id/player9_block"
                android:padding="3dip"
                android:text="@string/tempBlock" />

            <TextView
                android:id="@+id/player9_fouls"
                android:padding="3dip"
                android:text="@string/tempFoul" />

            <TextView
                android:id="@+id/player9_points"
                android:padding="3dip"
                android:text="@string/tempPoints" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/view_teams_player10"
                android:padding="3dip"
                android:text="@string/player1" />

            <TextView
                android:id="@+id/player10_fg"
                android:padding="3dip"
                android:text="@string/tempFG" />

            <TextView
                android:id="@+id/player10_three"
                android:padding="3dip"
                android:text="@string/tempThree" />

            <TextView
                android:id="@+id/player10_ft"
                android:padding="3dip"
                android:text="@string/tempFree" />

            <TextView
                android:id="@+id/player10_reb"
                android:padding="3dip"
                android:text="@string/tempReb" />

            <TextView
                android:id="@+id/player10_steal"
                android:padding="3dip"
                android:text="@string/tempSteal" />

            <TextView
                android:id="@+id/player10_block"
                android:padding="3dip"
                android:text="@string/tempBlock" />

            <TextView
                android:id="@+id/player10_fouls"
                android:padding="3dip"
                android:text="@string/tempFoul" />

            <TextView
                android:id="@+id/player10_points"
                android:padding="3dip"
                android:text="@string/tempPoints" />
        </TableRow>
    </TableLayout>

</FrameLayout>