<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStatsActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_stats_title"
            android:textSize="40sp"
            android:gravity="center"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:rowCount="4"
            android:columnCount="3"
            android:layout_weight="1">

            <Button
                android:id="@+id/add_stat1"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:text="@string/action1" />
            <Button
                android:id="@+id/add_stat2"
                android:layout_height="150dp"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/action2"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/add_stat3"
                android:layout_height="150dp"
                android:layout_row="0"
                android:layout_column="2"
                android:text="@string/action5"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/add_stat4"
                android:layout_height="150dp"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/action3"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/add_stat5"
                android:layout_height="150dp"
                android:layout_row="1"
                android:layout_column="1"
                android:text="@string/action4"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/add_stat6"
                android:layout_height="150dp"
                android:layout_row="1"
                android:layout_column="2"
                android:text="@string/action6"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/add_stat7"
                android:layout_height="150dp"
                android:layout_width="113dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:text="@string/action7" />

            <Button
                android:id="@+id/add_stat8"
                android:layout_height="150dp"
                android:layout_width="122dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:text="@string/action8" />
            <Button
                android:id="@+id/add_stat9"
                android:layout_height="150dp"
                android:layout_row="2"
                android:layout_column="2"
                android:text="@string/action9"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/add_stat10"
                android:layout_height="150dp"
                android:layout_width="113dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:text="@string/action10" />

            <Button
                android:id="@+id/add_stat11"
                android:layout_height="150dp"
                android:layout_width="122dp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:text="@string/action11" />
            <Button
                android:id="@+id/add_stat12"
                android:layout_height="150dp"
                android:layout_row="3"
                android:layout_column="2"
                android:text="@string/action12"
                android:layout_margin="10dp"/>
        </GridLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>